--- a/Arquivos do site/index.html
+++ b/Arquivos do site/index.html
@@ -1,60 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mauricio Santos - Portfólio</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mauricio Santos - Portfólio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <header>
-    <div class="container">
-        <img src="assets/foto.jpg" class="profile-photo">
+    <img src="assets/foto.jpg" class="profile-photo">
+    <div>
         <h1>Mauricio Antonio dos Santos</h1>
         <h2>Técnico de Suporte de TI</h2>
-        <p class="headline">Windows 11 • Office 365 • Entra ID • Intune • Suporte Técnico</p>
+        <p class="headline">Windows 11 • Office 365 • Entra ID • Intune • Redes • Suporte Técnico</p>
     </div>
 </header>
 
-<section>
-<div class="container">
-<h2>Sobre Mim</h2>
-<p>Mais de 15 anos como técnico em informática autônomo atuando em diversas empresas como CCAA e ANBIMA...</p>
-</div>
-</section>
+<main class="grid">
 
-<section>
-<div class="container">
-<h2>Experiência Profissional</h2>
-<h3>ANBIMA — Técnico de TI</h3>
-<p>Mar 2024 – Set 2025</p>
-<ul>
-<li>Gerenciamento de AD e Entra ID</li>
-<li>Quest Kace, Cherwell, auditoria</li>
-</ul>
+    <section>
+        <h3>Sobre Mim</h3>
+        <p>
+            Profissional com mais de 15 anos em suporte técnico, manutenção, redes e ambiente Microsoft.
+            Experiência em ANBIMA e CCAA. Cursando Sistemas de Informação e preparação para AWS Cloud Practitioner.
+        </p>
+    </section>
 
-<h3>CCAA — Técnico de TI</h3>
-<p>2005 – 2018</p>
-</div>
-</section>
+    <section>
+        <h3>Experiência</h3>
+        <ul>
+            <li><strong>ANBIMA — Técnico de TI (2024–2025)</strong><br>AD, Entra ID, Quest Kace, Cherwell, auditoria.</li>
+            <li><strong>ANBIMA — Estágio (2023–2024)</strong><br>Suporte interno de TI.</li>
+            <li><strong>CCAA — Técnico de TI (2005–2018)</strong><br>Redes, manutenção, suporte, montagem de PCs.</li>
+        </ul>
+    </section>
 
-<section>
-<div class="container">
-<h2>Formação Acadêmica</h2>
-<p>Escola da Nuvem — AWS re/Start (2025–2026)</p>
-<p>Universidade Cândido Mendes — Sistemas de Informação (2021–2025)</p>
-</div>
-</section>
+    <section>
+        <h3>Formação</h3>
+        <ul>
+            <li><strong>AWS re/Start — Escola da Nuvem</strong> (2025–2026)</li>
+            <li><strong>Sistemas de Informação — UCAM</strong> (2021–2025)</li>
+        </ul>
+    </section>
 
-<section>
-<div class="container">
-<h2>Contato</h2>
-<p>📞 +55 (21) 96567-6365</p>
-<p>📧 smuryll@gmail.com</p>
-<p>🔗 LinkedIn</p>
-</div>
-</section>
+    <section>
+        <h3>Competências</h3>
+        <div class="skills">
+            <span>Windows 11</span><span>Office 365</span><span>Entra ID</span><span>Intune</span>
+            <span>Redes</span><span>Montagem</span><span>Suporte N1/N2</span><span>Adaptabilidade</span>
+        </div>
+    </section>
 
-<footer><p>&copy; 2025 — Mauricio Santos</p></footer>
+    <section>
+        <h3>Contato</h3>
+        <p>📞 (21) 96567-6365</p>
+        <p>📧 <a href="mailto:smuryll@gmail.com">smuryll@gmail.com</a></p>
+        <p>🔗 <a href="https://www.linkedin.com/in/mauricio-antonio-dos-santos" target="_blank">LinkedIn</a></p>
+    </section>
+
+</main>
+
+<footer>
+    © 2025 — Mauricio Santos
+</footer>
+
 </body>
 </html>
